# estimation-for-SDEs

./: .flake8  .gitignore  1Dfunctional.py  1Dminimize.py  CITATION.cff  LICENSE  README.md  WasserteinDistance.ipynb  WasserteinDistance.py  fractionaBrownianmotion.py  fractionalBrownianmotion.py  fractionalOrnsteinUhlenbeck.py  oneD_functional.py  oneD_minimize.py  pyproject.toml  threeD_example.ipynb  threeD_example.py  threeD_examplev2.py  threeD_procedure.py  threeD_procedurev2.py  twoD-procedure.py  twoD_example.ipynb  twoD_example.py  twoD_procedure.ipynb  twoD_procedure.py
.github/workflows/: ci.yml
examples/: quick_start.ipynb
src/sde_estim/: __init__.py  distance.py  simulate_fou.py  simulation.py
src/sde_estim/estimators/: __init__.py  one_d_functional.py  one_d_minimize.py  three_d_example.py  three_d_examplev2.py  three_d_procedure.py  three_d_procedurev2.py  two_d_example.py  two_d_procedure.py
tests/: test_simulation.py
